# chess_gui

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/: pieces.json
cmake/: FindSDL2_Image.cmake
ext/: CMakeLists.txt
src/: CMakeLists.txt  assets.cpp  assets.h  human_gui_player.cpp  human_gui_player.h  json_helper.h  main.cpp  sdl_helper.h  sprite.cpp  sprite.h  texture.cpp  texture.h
